--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-
-pandas
-numpy
-scikit-learn
-matplotlib
-seaborn
-joblib
-streamlit
+pandas==1.5.3
+numpy==1.23.5
+scikit-learn==1.1.3
+matplotlib==3.6.3
+seaborn==0.12.2
+joblib==1.2.0
+streamlit==1.12.0
